# hdc-neon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WHERE-HDC-HELPS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
examples/: benchmark.py
src/: lib.rs
